tests/resource/valid/definition/assign_with_try_except.mamba
def g() -> Int raise [Exception] =>
    raise Exception("A")

def a := g() handle
    err: Exception => 10
